// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Story host styles With Knobs 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c15=""
    _nghost-a-c16=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c16=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Story host styles With story template 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c13=""
    _nghost-a-c14=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c14=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
